syntax = "proto3";
package pb;
option go_package = "github.com/v-starostin/go-metrics/internal/pb";

//import "google/api/annotations.proto";

service GoMetrics {
  rpc PostMetrics(PostMetricsRequest) returns (PostMetricsResponse) {}
}

message Metric {
  string id = 1;
  string mtype = 2;
  int64 delta = 3;
  double value = 4;
}

message PostMetricsRequest {
  repeated Metric metrics = 1;
}

message PostMetricsResponse {
  string response = 1;
}
